; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/crypto/extr_des_s390.c_ecb_des3_128_encrypt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/crypto/extr_des_s390.c_ecb_des3_128_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blkcipher_desc = type { i32 }
%struct.scatterlist = type { i32 }
%struct.crypt_s390_des3_128_ctx = type { i32 }
%struct.blkcipher_walk = type { i32 }

@KM_TDEA_128_ENCRYPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.blkcipher_desc*, %struct.scatterlist*, %struct.scatterlist*, i32)* @ecb_des3_128_encrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecb_des3_128_encrypt(%struct.blkcipher_desc* %0, %struct.scatterlist* %1, %struct.scatterlist* %2, i32 %3) #0 {
  %5 = alloca %struct.blkcipher_desc*, align 8
  %6 = alloca %struct.scatterlist*, align 8
  %7 = alloca %struct.scatterlist*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.crypt_s390_des3_128_ctx*, align 8
  %10 = alloca %struct.blkcipher_walk, align 4
  store %struct.blkcipher_desc* %0, %struct.blkcipher_desc** %5, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %6, align 8
  store %struct.scatterlist* %2, %struct.scatterlist** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.blkcipher_desc*, %struct.blkcipher_desc** %5, align 8
  %12 = getelementptr inbounds %struct.blkcipher_desc, %struct.blkcipher_desc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.crypt_s390_des3_128_ctx* @crypto_blkcipher_ctx(i32 %13)
  store %struct.crypt_s390_des3_128_ctx* %14, %struct.crypt_s390_des3_128_ctx** %9, align 8
  %15 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %16 = load %struct.scatterlist*, %struct.scatterlist** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @blkcipher_walk_init(%struct.blkcipher_walk* %10, %struct.scatterlist* %15, %struct.scatterlist* %16, i32 %17)
  %19 = load %struct.blkcipher_desc*, %struct.blkcipher_desc** %5, align 8
  %20 = load i32, i32* @KM_TDEA_128_ENCRYPT, align 4
  %21 = load %struct.crypt_s390_des3_128_ctx*, %struct.crypt_s390_des3_128_ctx** %9, align 8
  %22 = getelementptr inbounds %struct.crypt_s390_des3_128_ctx, %struct.crypt_s390_des3_128_ctx* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @ecb_desall_crypt(%struct.blkcipher_desc* %19, i32 %20, i32 %23, %struct.blkcipher_walk* %10)
  ret i32 %24
}

declare dso_local %struct.crypt_s390_des3_128_ctx* @crypto_blkcipher_ctx(i32) #1

declare dso_local i32 @blkcipher_walk_init(%struct.blkcipher_walk*, %struct.scatterlist*, %struct.scatterlist*, i32) #1

declare dso_local i32 @ecb_desall_crypt(%struct.blkcipher_desc*, i32, i32, %struct.blkcipher_walk*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
